fixed issue with paragraph spacing caused by reset

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,9 @@ header, footer {
     flex-shrink: 0;
 }
 
+p {
+    margin: 1em 0;
+}
 
 .nav {
     height: 100%;
